finish Blogs and Users implementation ( EndPoints + Fetching in client side)

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.3",
-    "jsonwebtoken": "^9.0.3"
+    "jsonwebtoken": "^9.0.3",
+    "socket.io": "^4.8.3"
   }
 }
