--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
      "allowJs": true,
     "checkJs": true,
      "noEmit": false,
+     "typeRoots": ["./node_modules/@types", "./src/types"],
      //"allowImportingTsExtensions":true
   },
   "include": ["src/**/*"],
